<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/report_hand_constraint"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/sri_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTheme"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/sri_left_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:visibility="visible"
                android:contentDescription="@string/arrow_left"
                android:padding="10dp"
                android:src="@drawable/arrow_left_black_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/single_test_hand_report_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/single_test_hand_report_title"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sri_solar_report_date"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textSize="22sp"
            android:textColor="@color/cmfda_tv_herbal_medicine_color"
            android:text="@string/palpation_single_test_report_date_text"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/test_hand_hist"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:textColor="@color/colorTheme"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/single_text_report_result_analysis"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="65dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:layout_marginStart="16dp">
            <TextView
                android:id="@+id/test_hand_result_analysis_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="18sp"
                android:text="@string/single_test_hand_report_result_analysis"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="51dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:textColor="@color/colorTheme"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/single_text_report_symptom"
            />
        <LinearLayout
            android:id="@+id/ll_fir"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="17dp"
            android:gravity="center_horizontal"
            android:background="@color/colorAccent"
            >
            <TextView
                android:id="@+id/stfr_symptom_one"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorTheme"
                android:textStyle="bold"
                android:text="@string/report_selected_symptom"
                />

            <TextView
                android:id="@+id/stfr_symptom_one_detail"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_one_detail_two"
                style="@style/singleTestReportSymptom_Style"/>
            <TextView
                android:id="@+id/stfr_symptom_one_detail_three"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_one_detail_four"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_one_detail_five"
                style="@style/singleTestReportSymptom_Style" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_sec"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="17dp"
            android:gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="17dp">
            <TextView
                android:id="@+id/stfr_symptom_two"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorTheme"
                android:textStyle="bold"
                android:text="@string/symptom_two"
                />

            <TextView
                android:id="@+id/stfr_symptom_two_detail"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_two_detail_two"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_two_detail_three"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_two_detail_four"
                style="@style/singleTestReportSymptom_Style" />
            <TextView
                android:id="@+id/stfr_symptom_two_detail_five"
                style="@style/singleTestReportSymptom_Style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_thi"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="17dp"
            android:gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="17dp">
            <TextView
                android:id="@+id/stfr_symptom_three"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorTheme"
                android:textStyle="bold"
                android:text="@string/symptom_three"
                />

            <TextView
                android:id="@+id/stfr_symptom_three_detail"
                style="@style/singleTestReportSymptom_Style"/>
            <TextView
                android:id="@+id/stfr_symptom_three_detail_two"
                style="@style/singleTestReportSymptom_Style"/>
            <TextView
                android:id="@+id/stfr_symptom_three_detail_three"
                style="@style/singleTestReportSymptom_Style"/>
            <TextView
                android:id="@+id/stfr_symptom_three_detail_four"
                style="@style/singleTestReportSymptom_Style"/>
            <TextView
                android:id="@+id/stfr_symptom_three_detail_five"
                style="@style/singleTestReportSymptom_Style"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_hint"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/cmfda_tv_herbal_medicine_color"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/stfr_health_hint"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="17dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start"
                android:textStyle="normal"
                android:text="@string/sthr_health_hint"
                />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorTheme"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="102dp">
    <Button
        android:id="@+id/physique_result_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="normal"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:text="@string/single_test_result_delete"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.361"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/physique_result_share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        />
    <Button
        android:id="@+id/physique_result_share"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="normal"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:text="@string/single_test_result_share"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.361"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.451"
        app:layout_constraintStart_toEndOf="@+id/physique_result_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>

